tests/typecheck/good/pair.scilexp

let f =
  fun (a : Map Int32 (Pair BNum Uint128)) =>
    Uint128 0
in
f
