tests/typecheck/bad/builtin-tvar.scilexp
let int_eq =
  tfun 'A =>
  fun (a : 'A) =>
  fun (b : 'A) =>
    builtin eq a b
in
int_eq
